--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 	"dependencies": {
 		"bits-ui": "^0.21.11",
 		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.1.6",
+		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
