--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"bits-ui": "^0.21.11",
+		"@radix-ui/react-dialog": "^1.1.1",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.6",
 		"svelte-radix": "^1.1.0",
