--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.1",
 		"bits-ui": "^0.21.12",
+		"chart.js": "^4.4.3",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.6",
+		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
