--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-headless-table": "^0.18.2",
 		"sveltekit-superforms": "^2.15.2",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
