--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"chart.js": "^4.4.3",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.6",
+		"lucide-svelte": "^0.407.0",
+		"recharts": "^2.12.7",
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"tailwind-merge": "^2.3.0",
