--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@radix-ui/react-dialog": "^1.1.1",
 		"bits-ui": "^0.21.12",
 		"chart.js": "^4.4.3",
+		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.1.6",
 		"firebase": "^10.12.4",
