--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/luxon": "^3.4.2",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"luxon": "^3.5.0",
 		"postcss": "^8.4.39",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -41,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.1",
+		"axios": "^1.7.4",
 		"bits-ui": "^0.21.12",
 		"chart.js": "^4.4.3",
 		"chartjs-plugin-datalabels": "^2.2.0",
@@ -53,6 +56,7 @@
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"svelte-spa-router": "^4.0.1",
+		"sweetalert2": "^11.12.4",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
 		"zod": "^3.23.8"
