--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@iconify/svelte": "^4.0.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
@@ -49,6 +50,7 @@
 		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "^2.1.1",
 		"cookie": "^0.6.0",
+		"dotenv": "^16.4.5",
 		"embla-carousel-svelte": "^8.1.6",
 		"firebase": "^10.12.4",
 		"lucide-svelte": "^0.407.0",
