fix Ui Dashboard Merchant

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/flatpickr": "^3.1.2",
 		"@types/luxon": "^3.4.2",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
@@ -51,6 +52,7 @@
 		"cookie": "^0.6.0",
 		"embla-carousel-svelte": "^8.1.6",
 		"firebase": "^10.12.4",
+		"flatpickr": "^4.6.13",
 		"lucide-svelte": "^0.407.0",
 		"paneforge": "^0.0.5",
 		"recharts": "^2.12.7",
