--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ build-job:
     - development  # เพิ่ม Tag ให้ตรงกับ Runner
   script:
     - echo $ENV | sed 's/ /\n/g' > .env
-    - cat .env
+    - docker-compose up -d --build
