Set max build memory

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ build-job:
   tags:
     - development  # เพิ่ม Tag ให้ตรงกับ Runner
   script:
+    - export NODE_OPTIONS="--max-old-space-size=1024" # จำกัดหน่วยความจำในการ build แค่ 1GB เท่านั้น
     - echo $ENV | sed 's/ /\n/g' > .env
     - cat .env
     - docker compose up -d --build
