--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,9 @@ services:
       - "3000:3000"
     environment:
       NODE_ENV: production
-  # nginx:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.nginx
-  #   ports:
-  #     - "80:80"
-  #   depends_on:
-  #     - sveltekit-app
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
-  #     - ./build:/usr/share/nginx/html:ro # Mount the local build directory
+  ngx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - /root/nginx/conf.d:/etc/nginx/conf.d:ro
