--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"@sveltejs/adapter-node": "^5.2.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/crypto-js": "^4.2.2",
 		"@types/eslint": "^8.56.7",
 		"@types/flatpickr": "^3.1.2",
 		"@types/luxon": "^3.4.2",
+		"@types/qrcode": "^1.5.5",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.10",
 		"eslint": "^9.0.0",
@@ -51,12 +53,14 @@
 		"chartjs-plugin-datalabels": "^2.2.0",
 		"clsx": "^2.1.1",
 		"cookie": "^0.6.0",
+		"crypto-js": "^4.2.0",
 		"dotenv": "^16.4.5",
 		"embla-carousel-svelte": "^8.1.6",
 		"firebase": "^10.12.4",
 		"flatpickr": "^4.6.13",
 		"lucide-svelte": "^0.407.0",
 		"paneforge": "^0.0.5",
+		"qrcode": "^1.5.4",
 		"recharts": "^2.12.7",
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
