--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"svelte-chartjs": "^3.1.5",
 		"svelte-radix": "^1.1.0",
 		"svelte-spa-router": "^4.0.1",
+		"svelte-tooltip": "^1.2.0",
 		"sweetalert2": "^11.12.4",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1",
